<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayersActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/questionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="10"
            android:fontFamily="@font/aladin"
            android:gravity="center"
            android:text="@string/what_is_your_name"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/name1View"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="5"
            android:ems="10"
            android:fontFamily="@font/aladin"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHighlight="#616161"
            android:textColorLink="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="10"
            android:fontFamily="@font/aladin"
            android:text="@string/you_will_play_with"
            android:textColor="#000000"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:layout_weight="50"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/celebrityView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="10"
            android:fontFamily="@font/aladin"
            android:text="@string/textview"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="15"
            android:backgroundTint="#FFFFFF"
            android:fadingEdge="horizontal|vertical"
            android:fontFamily="@font/alegreya"
            android:shadowColor="#554747"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="30"
            android:text="@string/play"
            android:textSize="30sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>